# aion-reactor

./: .gitignore  Cargo.toml  README.md  notes.txt
aion-reactor/src/memory/: access_map.rs  memory_domain.rs  mod.rs  resource_id.rs
aion-reactor/src/system/: mod.rs  stored_system.rs
aion-reactor/tests/: integration_test.rs
src/: id.rs  lib.rs
src/ecs/: entity.rs  world.rs
src/ids/: blocker_id.rs  event_id.rs  mod.rs  program_id.rs  system_id.rs
src/injection/: injection_trait.rs  mod.rs
src/injection/injection_advanced/: global.rs  local.rs  mod.rs  program_memory.rs  resulting.rs  system_id.rs
src/injection/injection_primitives/: cloned.rs  mod.rs  shared.rs  unique.rs
src/memory/: access_map.rs  errors.rs  memory_domain.rs  mod.rs  resource_id.rs
src/memory/access_checked_heap/: heap_access_map.rs  mod.rs  raw_access_map.rs  reservation_access_map.rs  reserve_access_map.rs
src/memory/access_checked_resource_map/: mod.rs
src/memory/access_map/: mod.rs
src/memory/program_memory_map/: inner_program_memory_map.rs  (+2 more)
src/processor/: mod.rs  tasks.rs
src/registry/: mod.rs  registry_results.rs
src/resolver/: access_drop.rs  mod.rs
src/state/: mod.rs
src/state_machine/: blocker.rs  event.rs  kernel_builder.rs  kernel_registry.rs  mod.rs  tick_accumulator.rs  transition_phases.rs
src/system/: mod.rs  stored_system.rs  system_cell.rs  system_result.rs  system_status.rs
tests/: integration_test.rs  mod.rs  test.rs
tests/accesses/: mod.rs
tests/generator/: mod.rs
tests/heap/: access_map.rs  heap_error.rs  mod.rs  owner.rs  resource.rs  resource_id.rs
tests/processor/: async_works.rs  fixed_ordering.rs  mod.rs  runs_one.rs
tests/processors/: mod.rs
tests/setup/: mod.rs
(+213 files in other folders)
