[package]
name = "aion-reactor"
version = "0.1.0"
edition = "2024"

[dependencies]
small_derive_deref = "0.1.4"
small_iter_fields = "0.1.8"

parking_lot = "0.12.5"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "sync", "time"] }
threadpool = "1.8.1"

proptest = "1.7.0"

anyhow = "1.0.100"
rand = "0.10.0-rc.0"