[package]
name = "aion-reactor"
version = "0.1.2+1"
edition = "2024"
license = "MIT"
description = "Simple State Machine"
repository = "https://github.com/Ike-l/aion-reactor"
readme = "README.md"

[dependencies]
small_derive_deref = "0.1.4"
small_iter_fields = "0.1.8"

parking_lot = "0.12.5"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "sync", "time"] }

proptest = "1.7.0"

anyhow = "1.0.100"
rand = "0.10.0-rc.0"

pollster = "0.4.0"

hecs = { version = "0.10.5", optional = true}

[features]
default = ["ecs"]
ecs = ["dep:hecs"]