[package]
name = "aion-reactor"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Simple State Machine"
repository = "https://github.com/Ike-l/aion-reactor"
readme = "README.md"

[dependencies]
# small_derive_deref = "0.1.4"
# small_iter_fields = "0.1.8"

parking_lot = "0.12.5"
# tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "sync", "time"] }

# threadpool = "1.8.1"

# proptest = "1.9.0"

# anyhow = "1.0.100"
# rand = "0.9.2"

# pollster = "0.4.0"

# hecs = "0.10.5"

# tracing = "0.1.44"

[dev-dependencies]
# aion-utilities = { path = "../../aion-utilities"}
# lazy_static = "1.5.0"
# tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }